Update shopping web page.html

--- a/shopping wb page.html
+++ b/shopping wb page.html
@@ -8,7 +8,7 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href=
 "C:\Users\Dell\Desktop\web pages\shopping.css">
-    <title>Amazon Clone</title>
+    <title> Shopping App </title>
 </head>
 
 <body>
